deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-eks-app
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-container
        # Replace with your image (e.g., from Amazon ECR)
        image: 864753716045.dkr.ecr.ap-south-2.amazonaws.com/awsrepository:latest
        ports:
        - containerPort: 500
