service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-eks-service
  annotations:
    # Specifies that an NLB should be provisioned (replaces Classic LB)
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    # 'ip' targets are recommended for VPC CNI to route directly to pods
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    # Specifies the scheme (internet-facing or internal)
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: my-app
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
